# myq-reverse-engineer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_AUTH.md  auto_capture_proxy.py  browser_login.py  config.py  deploy.sh  docker-compose.yml  main.py  myq_api.py  myq_client.py  myq_patch.py  myq_tokens.example.json  pyproject.toml  requirements.txt  server.py  setup.sh  start_capture.sh  update_tokens.py
