[project]
name = "myq-garage-api"
version = "0.1.0"
description = "Control your MyQ garage door from Apple Shortcuts via REST API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "mitmproxy>=12.2.1",
    "playwright>=1.57.0",
    "pydantic-settings>=2.12.0",
    "pymyq>=3.1.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.40.0",
]
